--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,160 +1,96 @@
 version: '3.7'
 
 services:
-  prometheus:
-    image: prom/prometheus:latest
-    restart: always
-    container_name: prometheus
-    hostname: prometheus
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus/rules/alert_rules.yml:/etc/prometheus/rules/alert_rules.yml
-    command: --config.file=/etc/prometheus/prometheus.yml
-    environment:
-      TZ: 'Asia/Taipei'
-
-  telegraf:
-    image: telegraf:1.27.2
-    restart: always
-    container_name: telegraf
-    hostname: telegraf
-    ports:
-      - 9273:9273
-    volumes:
-      - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf
-      - ./telegraf/elastic/:/etc/telegraf/elastic/
-    command: telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf/elastic/
-    
-  grafana:
-    container_name: grafana
-    hostname: grafana
+  setup:
+    profiles:
+      - setup
     build:
-      context: ./grafana
-      dockerfile: Dockerfile
-    image: cask-grafana:1.0.0
-    #restart: unless-stopped
-    restart: always
-    entrypoint: /run.sh
-    depends_on:
-      es_node_01:
-        condition: service_healthy
-      es_node_02:
-        condition: service_healthy
-      es_node_03:
-        condition: service_healthy
-    ports:
-      - 5601:5601
-      - 3000:3000
-    environment:
-      - ELASTICSEARCH_HOSTS=["http://es_node_01:9200", "http://es_node_02:9200", "http://es_node_03:9200"]
-      - GF_DEFAULT_APP_MODE=development
-    
+      context: setup/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    init: true
     volumes:
-      - grafana_data:/var/lib/grafana
-      #- ./grafana/dist:/var/lib/grafana/plugins/volkovlabs-app
-      - ./grafana//provisioning:/etc/grafana/provisioning
-      - ./grafana/icon/:/usr/share/grafana/public/img/icon
-
-  nginx:
-    container_name: nginx
-    build: ./nginx
-    restart: always
+      - ./setup/entrypoint.sh:/entrypoint.sh:ro,Z
+      - ./setup/lib.sh:/lib.sh:ro,Z
+      - ./setup/roles:/roles:ro,Z
     environment:
-      - GRAFANA_HOST=host.docker.internal
-    ports:
-      - 80:80/tcp
-      - 443:443/tcp
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+      METRICBEAT_INTERNAL_PASSWORD: ${METRICBEAT_INTERNAL_PASSWORD:-}
+      FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
+      HEARTBEAT_INTERNAL_PASSWORD: ${HEARTBEAT_INTERNAL_PASSWORD:-}
+      MONITORING_INTERNAL_PASSWORD: ${MONITORING_INTERNAL_PASSWORD:-}
+      BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
+    networks:
+      - elk
     depends_on:
-      - grafana
+      - elasticsearch
 
-  es_node_01:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
+  elasticsearch:
+    build:
+      context: elasticsearch/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - elasticsearch:/usr/share/elasticsearch/data:Z
     ports:
       - 9200:9200
       - 9300:9300
     environment:
-      node.name: es_node_01
-      discovery.seed_hosts: es_node_01, es_node_02, es_node_03
-      cluster.initial_master_nodes: es_node_01, es_node_02, es_node_03
-      cluster.name: mycluster
-      bootstrap.memory_lock: "true"
-      ES_JAVA_OPTS: -Xms256m -Xmx256m
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      discovery.type: single-node
+    networks:
+      - elk
+    restart: unless-stopped
+
+  logstash:
+    build:
+      context: logstash/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
-      - es_data_01:/usr/share/elasticsearch/data
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    healthcheck:
-      test: ["CMD-SHELL", "curl http://localhost:9200"]
-      interval: 10s
-      timeout: 10s
-      retries: 120
-  es_node_02:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
     ports:
-      - 9201:9200
-      - 9301:9300
+      - 5044:5044
+      - 50000:50000/tcp
+      - 50000:50000/udp
+      #- 5000:5000/tcp
+      #- 12201:12201/udp
+      - 9600:9600
     environment:
-      node.name: es_node_02
-      discovery.seed_hosts: es_node_01, es_node_02, es_node_03
-      cluster.initial_master_nodes: es_node_01, es_node_02, es_node_03
-      cluster.name: mycluster
-      bootstrap.memory_lock: "true"
-      ES_JAVA_OPTS: -Xms256m -Xmx256m
-    volumes:
-      - es_data_02:/usr/share/elasticsearch/data
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    healthcheck:
-      test: ["CMD-SHELL", "curl http://localhost:9200"]
-      interval: 10s
-      timeout: 10s
-      retries: 120
-  es_node_03:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
-    ports:
-      - 9202:9200
-      - 9303:9300
-    environment:
-      node.name: es_node_03
-      discovery.seed_hosts: es_node_01, es_node_02, es_node_03
-      cluster.initial_master_nodes: es_node_01, es_node_02, es_node_03
-      cluster.name: mycluster
-      bootstrap.memory_lock: "true"
-      ES_JAVA_OPTS: -Xms256m -Xmx256m
-    volumes:
-      - es_data_03:/usr/share/elasticsearch/data
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    healthcheck:
-      test: ["CMD-SHELL", "curl http://localhost:9200"]
-      interval: 10s
-      timeout: 10s
-      retries: 120
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
 
   kibana:
-    #image: docker.elastic.co/kibana/kibana-oss:7.10.2
-    image: arm64v8/kibana:7.17.10
-    depends_on:
-      es_node_01:
-        condition: service_healthy
-      es_node_02:
-        condition: service_healthy
-      es_node_03:
-        condition: service_healthy
+    build:
+      context: kibana/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
     ports:
       - 5601:5601
     environment:
-      - ELASTICSEARCH_HOSTS=["http://es_node_01:9200", "http://es_node_02:9200", "http://es_node_03:9200"]
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+networks:
+  elk:
+    driver: bridge
+
 volumes:
-  grafana_data: {}
-  es_data_01: {}
-  es_data_02: {}
-  es_data_03: {}
+  elasticsearch:
