--- a/telegraf/elastic/elastic.conf
+++ b/telegraf/elastic/elastic.conf
@@ -1,6 +1,6 @@
 [[inputs.elasticsearch]]
   ## servers = ["http://user:pass@localhost:9200"]
-servers = ["http://localhost:9200"]
+servers = ["http://elastic:Az123567!@elasticsearch:9200"]
 
   ## Timeout for HTTP requests to the elastic search server(s)
 http_timeout = "5s"
@@ -33,7 +33,7 @@ cluster_health = true
 
   ## One of "shards", "cluster", "indices"
   ## Currently only "shards" is implemented
-  indices_level = "shards"
+  indices_level = "cluster"
 
   ## node_stats is a list of sub-stats that you want to have gathered.
   ## Valid options are "indices", "os", "process", "jvm", "thread_pool",
